[global]
build-dir = "build"

[tool.cmake]
experimental = true

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = []
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
CMAKE_PREFIX_PATH= {env="CMAKE_PREFIX_PATH", default="/tmp/downloads/local"}
SIREN_PYTHON_PACKAGE = {env="SIREN_PYTHON_PACKAGE", default="OFF"}

[tool.cibuildwheel]
before-all = "bash {project}/tools/wheels/cibw_before_all.sh {project}"
skip = "pp*"
# Confirm the built wheel actually bundles HepMC3 and siren.hepmc3 imports.
test-command = "python {project}/tools/wheels/test_hepmc3_wheel.py"
# Importing siren pulls numpy/scipy; those have no binary wheels for musllinux
# cp38/cp39 or aarch64 cp38 and cannot source-build in the isolated test env
# (scipy needs OpenBLAS). The wheels still build and bundle HepMC3 on these
# targets -- only the import smoke test is skipped there. HepMC3 bundling is
# still exercised on every other wheel (macOS, manylinux, and musllinux cp310+).
test-skip = "cp38-musllinux* cp39-musllinux* cp38-manylinux_aarch64"

[tool.cibuildwheel.windows]
environment = { RUNNER_OS="Windows", CI_INSTALL_PREFIX="C:/Users/AppData/Local/Temp/downloads/local", CFITSIOROOT="$CI_INSTALL_PREFIX", LD_LIBRARY_PATH="$CI_INSTALL_PREFIX/lib;$CI_INSTALL_PREFIX/lib64;$CI_INSTALL_PREFIX/bin;$LD_LIBRARY_PATH" }
repair-wheel-command = "delvewheel repair --add-path $LD_LIBRARY_PATH"

[tool.cibuildwheel.linux]
environment = { RUNNER_OS="Linux", MAKEFLAGS="-j2", CI_INSTALL_PREFIX="/tmp/downloads/local", CFITSIOROOT="$CI_INSTALL_PREFIX", LD_LIBRARY_PATH="$CI_INSTALL_PREFIX/lib:$CI_INSTALL_PREFIX/lib64:$LD_LIBRARY_PATH" }
repair-wheel-command = "auditwheel repair --exclude photospline -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
environment = { RUNNER_OS="macOS", MAKEFLAGS="-j2", CI_INSTALL_PREFIX="/tmp/downloads/local", CFITSIOROOT="$CI_INSTALL_PREFIX", REPO_PATH="/Users/runner/work/SIREN/SIREN", REPAIR_LIBRARY_PATH="$CI_INSTALL_PREFIX/lib:$CI_INSTALL_PREFIX/lib64", LD_LIBRARY_PATH="$REPAIR_LIBRARY_PATH:$LD_LIBRARY_PATH", DYLD_LIBRARY_PATH="$REPAIR_LIBRARY_PATH:$DYLD_LIBRARY_PATH" }
repair-wheel-command = """\
DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH:$DYLD_LIBRARY_PATH echo "Search path: $DYLD_LIBRARY_PATH" && \
DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH:$DYLD_LIBRARY_PATH delocate-listdeps {wheel} && \
DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH:$DYLD_LIBRARY_PATH which python && \
DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH:$DYLD_LIBRARY_PATH python --version && \
DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH:$DYLD_LIBRARY_PATH delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"""

[project]
name = "siren"
version = "0.1.0"
description = "Sampling and Injection for Rare EveNts: A neutrino and rare-process injection toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["physics", "hep", "neutrino", "bsm", "simulation", "injection", "weighting"]
authors = [
    {name = "Austin Schneider", email = "aschn@mit.edu"},
    {name = "Nicholas Kamp", email = "nkamp@fas.harvard.edu"}
]
maintainers = [
    {name = "Austin Schneider", email = "aschn@mit.edu"},
    {name = "Nicholas Kamp", email = "nkamp@fas.harvard.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy",
    "awkward",
    "pyarrow",
    "h5py",
]
[project.optional-dependencies]
DarkNews = ["DarkNews>=0.4.2"]
# Geometry visualization (siren.visualization):
#   plot_cross_sections needs matplotlib (>=3.3 for the turbo colormap);
#   view() needs pyg4ometry; view_pv() / view(backend="pyvista") needs pyvista;
#   to_web() needs pygltflib (plus jinja2 for the .html path);
#   to_gdml needs none of these (writes standard GDML for any external viewer).
visualization = ["matplotlib>=3.3"]
visualization-3d = ["matplotlib>=3.3", "pyg4ometry", "pyvista>=0.39", "pygltflib", "jinja2"]

[project.scripts]
siren-download = "siren.download:main"

[project.urls]
Homepage = "https://github.com/Harvard-Neutrino/SIREN"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/Harvard-Neutrino/SIREN.git"
Issues = "https://github.com/Harvard-Neutrino/SIREN/issues"

[wheel]
no-clean = true

[install]
no-clean = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = "-ra"
# Default norecursedirs plus "vendor" so `pytest .` doesn't try to collect
# the Python tests shipped inside vendor/googletest, vendor/pybind11, etc.
norecursedirs = [
    "*.egg", ".*", "_darcs", "CVS", "build", "dist", "node_modules", "venv", "{arch}",
    "vendor",
]
